# Sentry

./: .gitignore  DOCUMENTATION.md  README.md  niga2.py  pyproject.toml
configs/: default.yaml
notebooks/: example_workflow.ipynb  full_dataset_gathering.ipynb  merged_dataset_training.ipynb
releases/: RELEASES.md
scripts/: analyze.py  audit.py  detect_combined_live.py  detect_weapons_live.py  infer.py  ingest_github.py  ingest_local.py  merge.py  train.py  validate.py
src/sentry_ai/: __init__.py  config.py
src/sentry_ai/analysis/: __init__.py  dataset_analysis.py  visualize.py
src/sentry_ai/dataset/: audit.py  ingest.py  merge.py  validate.py
src/sentry_ai/yolo/: infer.py  train.py
test/: pynig.ipynb
