[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentry"
version = "0.1.0"
description = "A scripts-only YOLO dataset and training pipeline."
readme = "README.md"
authors = [{ name = "Sentry Developer" }]
requires-python = ">=3.9"
dependencies = [
    "ultralytics>=8.1.0",
    "pyyaml>=6.0",
    "opencv-python>=4.8.0",
    "tqdm>=4.65.0",
    "GitPython>=3.1.0",
    "pandas>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sentry_ai*"]
